# evenkeel

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
.sqlx/: query-01e0b5f4244cecc823b94d8a07eb6086d07d3d9c66e9e15ed068317fb9471932.json  query-04890373abd9d937f1ab158f24333435420212649851d6f86520b6d4f1b0c12b.json  query-35f67ad2996f53ee78a22505405dc579b91f20db5fbb04f4eb282ba2e2364f1b.json  query-46c4dcadb92ddad2a032bbf2e096c9538d25c37fead680be4fe56731287a73a3.json  query-5b83c4194599511435056b11668532ca9ddb42f91ec56498a399e49803fc72f4.json  query-62b13f253000c737360440da25ef087b85e3c7444fe82fe93589fd7ad7ece7e0.json  query-68a9d91395ba0c14278a1f3434c6f78f089afcc08745600505adeefd591a2f2f.json  query-739cf4471bac61a8f140a504f2ea6fbc3d21aaf0086e88ef69550f67e7ca9e87.json  query-86ef1226ff67c80fa35802edf3ecee27e7c22c311fbfe7e3b072ccb1f592c841.json  query-982b9325c234e118fb8fbc73bec8c6203b78211a11f2e098da09c384c468ef47.json
crates/evenkeel-core/: Cargo.toml
crates/evenkeel-core/src/: health.rs  lib.rs  planner.rs  policy.rs  types.rs
crates/evenkeel-core/tests/: planner_props.rs  properties.rs
crates/evenkeel-node/: Cargo.toml
crates/evenkeel-node/src/: error.rs  hex.rs  lib.rs  mock.rs  payments.rs  real.rs  rpc_types.rs
crates/evenkeel-server/: Cargo.toml
crates/evenkeel-server/src/: api.rs  config.rs  control.rs  executor.rs  lib.rs  main.rs  metrics.rs  sim.rs  state.rs
crates/evenkeel-server/tests/: scenarios.rs  sim_props.rs
crates/evenkeel-store/: Cargo.toml
crates/evenkeel-store/src/: actions.rs  lib.rs  policy.rs
crates/evenkeel-store/tests/: actions.rs  policy.rs  roundtrip.rs
dashboard/: Dockerfile  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
dashboard/assets/css/: main.css
dashboard/components/: ActionLog.vue  ChannelCard.vue  HealthBadge.vue  PolicyPanel.vue  ProposalCard.vue  Sparkline.vue  StalenessBanner.vue
dashboard/composables/: useDashboard.ts
dashboard/types/: api.ts
dashboard/utils/: format.ts
docs/: architecture.md  demo-script.md  live-demo.md  presenter-script.md  spike-notes.md  submission.md
migrations/: 0001_channel_snapshots.sql  0002_rebalance_actions.sql  0003_policy.sql
ops/docker/: server.Dockerfile
ops/sim/: report.html  report.json
ops/spike/: .gitignore  README.md  docker-compose.yml  fnn-rpc.sh  setup-fnn.sh
