[package]
name = "evenkeel-server"
description = "Axum API, Prometheus /metrics, and the serialized control loop."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
evenkeel-core = { workspace = true }
evenkeel-node = { workspace = true }
evenkeel-store = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
prometheus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
