[package]
name = "evenkeel-store"
description = "Persistence: channel snapshot time-series and (later phases) action log, policy, fee ledger."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
evenkeel-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
